; ModuleID = '/home/carl/AnghaBench/systemd/src/backlight/extr_backlight.c_shall_clamp.c'
source_filename = "/home/carl/AnghaBench/systemd/src/backlight/extr_backlight.c_shall_clamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"ID_BACKLIGHT_CLAMP\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"Failed to get ID_BACKLIGHT_CLAMP property, ignoring: %m\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"Failed to parse ID_BACKLIGHT_CLAMP property, ignoring: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @shall_clamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @shall_clamp(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @sd_device_get_property_value(i32* %8, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8** %4)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @log_device_debug_errno(i32* %13, i32 %14, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %27

16:                                               ; preds = %1
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @parse_boolean(i8* %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @log_device_debug_errno(i32* %22, i32 %23, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %27

25:                                               ; preds = %16
  %26 = load i32, i32* %5, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %21, %12
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_device_get_property_value(i32*, i8*, i8**) #1

declare dso_local i32 @log_device_debug_errno(i32*, i32, i8*) #1

declare dso_local i32 @parse_boolean(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
